--- a/MauiCollectionView/MainPage.xaml
+++ b/MauiCollectionView/MainPage.xaml
@@ -10,9 +10,20 @@
                     VerticalOptions="FillAndExpand">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <VerticalStackLayout 
+                    <SwipeView>
+                        <SwipeView.RightItems>
+                            <SwipeItems>
+                                <SwipeItem Text="Test1"
+                                           IconImageSource="dotnet_bot.svg"
+                                           BackgroundColor="Transparent" />
+                                <SwipeItem Text="Test2"                                                           
+                                           IconImageSource="dotnet_bot.svg"
+                                           BackgroundColor="Transparent" />
+                            </SwipeItems>
+                        </SwipeView.RightItems>
+                        <VerticalStackLayout 
                             Padding="0,0,0,20">
-                        <Grid 
+                            <Grid 
                                 HorizontalOptions="CenterAndExpand"
                                 VerticalOptions="Start"
                                 HeightRequest="30"
@@ -20,104 +31,104 @@
                                 ColumnSpacing="10"
                                 ColumnDefinitions="70, 7*, 3*" 
                                 RowDefinitions="Auto">
-                            <VerticalStackLayout
+                                <VerticalStackLayout
                                     Grid.Row="0"
                                     Grid.Column="0"
                                     HorizontalOptions="FillAndExpand"
                                     VerticalOptions="FillAndExpand">
-                                <Image
+                                    <Image
                                         Aspect="AspectFit"
                                         WidthRequest="40"
                                         HeightRequest="40"/>
-                            </VerticalStackLayout>
-                            <VerticalStackLayout
+                                </VerticalStackLayout>
+                                <VerticalStackLayout
                                     Grid.Row="0"
                                     Grid.Column="1"
                                     HorizontalOptions="FillAndExpand"
                                     VerticalOptions="FillAndExpand">
-                                <Label 
+                                    <Label 
                                         Text="{Binding Name}" 
                                         LineBreakMode="CharacterWrap"
                                         TextColor="White"
                                         FontSize="14"/>
-                                <Grid 
+                                    <Grid 
                                         HorizontalOptions="CenterAndExpand"
                                         VerticalOptions="FillAndExpand"
                                         RowSpacing="10"
                                         ColumnSpacing="10"
                                         ColumnDefinitions="Auto, *" 
                                         RowDefinitions="Auto">
-                                    <VerticalStackLayout
+                                        <VerticalStackLayout
                                             Grid.Row="0"
                                             Grid.Column="0">
-                                        <Label 
+                                            <Label 
                                                 Text="{Binding Name}" 
                                                 TextColor="White"
                                                 FontSize="14"/>
-                                        <Label 
+                                            <Label 
                                                 Text="{Binding Name}" 
                                                 TextColor="White"
                                                 FontSize="14"/>
-                                    </VerticalStackLayout>
-                                    <Label 
+                                        </VerticalStackLayout>
+                                        <Label 
                                             Grid.Row="0"
                                             Grid.Column="1"
                                             Text="{Binding Name}" 
                                             TextColor="White"
                                             FontSize="14"/>
-                                </Grid>
-                            </VerticalStackLayout>
-                            <VerticalStackLayout
+                                    </Grid>
+                                </VerticalStackLayout>
+                                <VerticalStackLayout
                                     Grid.Row="0"
                                     Grid.Column="2"
                                     HorizontalOptions="FillAndExpand"
                                     VerticalOptions="FillAndExpand">
-                                <Grid 
+                                    <Grid 
                                         HorizontalOptions="CenterAndExpand"
                                         VerticalOptions="FillAndExpand"
                                         RowSpacing="10"
                                         ColumnSpacing="10"
                                         ColumnDefinitions="Auto" 
                                         RowDefinitions="Auto, Auto">
-                                    <Label 
+                                        <Label 
                                             Grid.Row="0"
                                             Grid.Column="0"
                                             Text="{Binding Name}" 
                                             TextColor="White"
                                             FontSize="14"/>
-                                    <Label 
+                                        <Label 
                                             Grid.Row="1"
                                             Grid.Column="0"
                                             Text="{Binding Name}" 
                                             TextColor="White"
                                             FontSize="14"/>
-                                </Grid>
-                            </VerticalStackLayout>
-                        </Grid>
+                                    </Grid>
+                                </VerticalStackLayout>
+                            </Grid>
 
-                        <VerticalStackLayout 
+                            <VerticalStackLayout 
                                 Padding="0,0,0,10">
-                            <Grid 
+                                <Grid 
                                     HorizontalOptions="FillAndExpand"
                                     VerticalOptions="FillAndExpand"
                                     RowSpacing="10"
                                     ColumnSpacing="10"
                                     ColumnDefinitions="70, *" 
                                     RowDefinitions="Auto">
-                                <Image
+                                    <Image
                                         Grid.Row="0"
                                         Grid.Column="0"
                                         Aspect="AspectFit"
                                         WidthRequest="40"
                                         HeightRequest="40"/>
-                                <VerticalStackLayout 
+                                    <VerticalStackLayout 
                                         Grid.Row="0"
                                         Grid.Column="1"
                                         Opacity="0"
                                         HorizontalOptions="FillAndExpand"
                                         VerticalOptions="FillAndExpand"/>
-                            </Grid>
-                            <Grid 
+                                </Grid>
+                                <Grid 
                                     Padding="10,10,10,0"
                                     HorizontalOptions="FillAndExpand"
                                     VerticalOptions="FillAndExpand"
@@ -125,7 +136,7 @@
                                     ColumnSpacing="10"
                                     ColumnDefinitions="3.3*,3.3*,3.3*" 
                                     RowDefinitions="Auto">
-                                <Frame 
+                                    <Frame 
                                         Grid.Row="0"
                                         Grid.Column="0"
                                         HorizontalOptions="FillAndExpand"
@@ -134,7 +145,7 @@
                                         BackgroundColor="Black"
                                         BorderColor="Green"
                                         CornerRadius="20">
-                                    <ImageButton 
+                                        <ImageButton 
                                             Source="dotnet_bot.svg"
                                             Aspect="AspectFit"
                                             WidthRequest="25"
@@ -142,8 +153,8 @@
                                             HorizontalOptions="FillAndExpand"
                                             VerticalOptions="FillAndExpand"
                                             BackgroundColor="Transparent"/>
-                                </Frame>
-                                <Frame 
+                                    </Frame>
+                                    <Frame 
                                         Grid.Row="0"
                                         Grid.Column="1"
                                         HorizontalOptions="FillAndExpand"
@@ -152,7 +163,7 @@
                                         BackgroundColor="Black"
                                         BorderColor="Green"
                                         CornerRadius="20">
-                                    <ImageButton 
+                                        <ImageButton 
                                             Source="dotnet_bot.svg"
                                             Aspect="AspectFit"
                                             WidthRequest="25"
@@ -160,8 +171,8 @@
                                             HorizontalOptions="FillAndExpand"
                                             VerticalOptions="FillAndExpand"
                                             BackgroundColor="Transparent"/>
-                                </Frame>
-                                <Frame 
+                                    </Frame>
+                                    <Frame 
                                         Grid.Row="0"
                                         Grid.Column="2"
                                         HorizontalOptions="FillAndExpand"
@@ -170,7 +181,7 @@
                                         BackgroundColor="Black"
                                         BorderColor="Green"
                                         CornerRadius="20">
-                                    <ImageButton
+                                        <ImageButton
                                             Source="dotnet_bot.svg"
                                             Aspect="AspectFit"
                                             WidthRequest="25"
@@ -178,16 +189,17 @@
                                             HorizontalOptions="FillAndExpand"
                                             VerticalOptions="FillAndExpand"
                                             BackgroundColor="Transparent"/>
-                                </Frame>
-                            </Grid>
-                        </VerticalStackLayout>
-                        <BoxView 
+                                    </Frame>
+                                </Grid>
+                            </VerticalStackLayout>
+                            <BoxView 
                                 HeightRequest="1"
                                 BackgroundColor="Green"
                                 Opacity="0.5"
                                 HorizontalOptions="FillAndExpand"
                                 VerticalOptions="Start"/>
-                    </VerticalStackLayout>
+                        </VerticalStackLayout>
+                    </SwipeView>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
