--- a/MauiCollectionView/MainPage.xaml
+++ b/MauiCollectionView/MainPage.xaml
@@ -1,198 +1,79 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiCollectionView.MainPage">
+<ContentPage 
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    BackgroundColor="Black"
+    x:Name="TestPage"    
+    x:Class="MauiCollectionView.MainPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <DataTemplate x:Key="DefaultTemplate">
+                <StackLayout
+                        BackgroundColor="Red">
+                    <Label
+                            Text="{Binding Name}"
+                            TextColor="White"
+                            FontAttributes="Bold"
+                            FontSize="20"/>
+                    <Label
+                            Text="Template: DefaultTemplate"
+                            TextColor="White"
+                            FontSize="20"/>
+                </StackLayout>
+            </DataTemplate>
+
+            <DataTemplate x:Key="OtherTemplate">
+                <StackLayout
+                        BackgroundColor="Green">
+                    <Label
+                            Text="{Binding Name}"
+                            TextColor="White"
+                            FontAttributes="Bold"
+                            FontSize="20"/>
+                    <Label
+                            Text="Template: OtherTemplate"
+                            TextColor="White"
+                            FontSize="20"/>
+                </StackLayout>
+            </DataTemplate>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <ScrollView>
-        <VerticalStackLayout>
+        <StackLayout>
+            <Button 
+                Text="Change ItemTemplate"
+                BackgroundColor="NavajoWhite"
+                TextColor="Black"
+                FontSize="20"
+                Command="{Binding ChangeItemTemplateCommand}"/>
+
             <CollectionView 
                     ItemsSource="{Binding Bots}"
-                    HorizontalOptions="FillAndExpand"
+                    HorizontalOptions="FillAndExpand" 
                     VerticalOptions="FillAndExpand">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <VerticalStackLayout 
-                            Padding="0,0,0,20">
-                            <Grid 
-                                HorizontalOptions="CenterAndExpand"
-                                VerticalOptions="Start"
-                                HeightRequest="30"
-                                RowSpacing="10"
-                                ColumnSpacing="10"
-                                ColumnDefinitions="70, 7*, 3*" 
-                                RowDefinitions="Auto">
-                                <VerticalStackLayout
-                                    Grid.Row="0"
-                                    Grid.Column="0"
-                                    HorizontalOptions="FillAndExpand"
-                                    VerticalOptions="FillAndExpand">
-                                    <Image
-                                        Aspect="AspectFit"
-                                        WidthRequest="40"
-                                        HeightRequest="40"/>
-                                </VerticalStackLayout>
-                                <VerticalStackLayout
-                                    Grid.Row="0"
-                                    Grid.Column="1"
-                                    HorizontalOptions="FillAndExpand"
-                                    VerticalOptions="FillAndExpand">
-                                    <Label 
-                                        Text="{Binding Name}" 
-                                        LineBreakMode="CharacterWrap"
-                                        TextColor="White"
-                                        FontSize="14"/>
-                                    <Grid 
-                                        HorizontalOptions="CenterAndExpand"
-                                        VerticalOptions="FillAndExpand"
-                                        RowSpacing="10"
-                                        ColumnSpacing="10"
-                                        ColumnDefinitions="Auto, *" 
-                                        RowDefinitions="Auto">
-                                        <VerticalStackLayout
-                                            Grid.Row="0"
-                                            Grid.Column="0">
-                                            <Label 
-                                                Text="{Binding Name}" 
-                                                TextColor="White"
-                                                FontSize="14"/>
-                                            <Label 
-                                                Text="{Binding Name}" 
-                                                TextColor="White"
-                                                FontSize="14"/>
-                                        </VerticalStackLayout>
-                                        <Label 
-                                            Grid.Row="0"
-                                            Grid.Column="1"
-                                            Text="{Binding Name}" 
-                                            TextColor="White"
-                                            FontSize="14"/>
-                                    </Grid>
-                                </VerticalStackLayout>
-                                <VerticalStackLayout
-                                    Grid.Row="0"
-                                    Grid.Column="2"
-                                    HorizontalOptions="FillAndExpand"
-                                    VerticalOptions="FillAndExpand">
-                                    <Grid 
-                                        HorizontalOptions="CenterAndExpand"
-                                        VerticalOptions="FillAndExpand"
-                                        RowSpacing="10"
-                                        ColumnSpacing="10"
-                                        ColumnDefinitions="Auto" 
-                                        RowDefinitions="Auto, Auto">
-                                        <Label 
-                                            Grid.Row="0"
-                                            Grid.Column="0"
-                                            Text="{Binding Name}" 
-                                            TextColor="White"
-                                            FontSize="14"/>
-                                        <Label 
-                                            Grid.Row="1"
-                                            Grid.Column="0"
-                                            Text="{Binding Name}" 
-                                            TextColor="White"
-                                            FontSize="14"/>
-                                    </Grid>
-                                </VerticalStackLayout>
-                            </Grid>
-
-                            <VerticalStackLayout 
-                                Padding="0,0,0,10">
-                                <Grid 
-                                    HorizontalOptions="FillAndExpand"
-                                    VerticalOptions="FillAndExpand"
-                                    RowSpacing="10"
-                                    ColumnSpacing="10"
-                                    ColumnDefinitions="70, *" 
-                                    RowDefinitions="Auto">
-                                    <Image
-                                        Grid.Row="0"
-                                        Grid.Column="0"
-                                        Aspect="AspectFit"
-                                        WidthRequest="40"
-                                        HeightRequest="40"/>
-                                    <VerticalStackLayout 
-                                        Grid.Row="0"
-                                        Grid.Column="1"
-                                        Opacity="0"
-                                        HorizontalOptions="FillAndExpand"
-                                        VerticalOptions="FillAndExpand"/>
-                                </Grid>
-                                <Grid 
-                                    Padding="10,10,10,0"
-                                    HorizontalOptions="FillAndExpand"
-                                    VerticalOptions="FillAndExpand"
-                                    RowSpacing="10"
-                                    ColumnSpacing="10"
-                                    ColumnDefinitions="3.3*,3.3*,3.3*" 
-                                    RowDefinitions="Auto">
-                                    <Frame 
-                                        Grid.Row="0"
-                                        Grid.Column="0"
-                                        HorizontalOptions="FillAndExpand"
-                                        VerticalOptions="FillAndExpand"
-                                        Padding="10,10,10,10"
-                                        BackgroundColor="Black"
-                                        BorderColor="Green"
-                                        CornerRadius="20">
-                                        <ImageButton 
-                                            Source="dotnet_bot.svg"
-                                            Aspect="AspectFit"
-                                            WidthRequest="25"
-                                            HeightRequest="25"
-                                            HorizontalOptions="FillAndExpand"
-                                            VerticalOptions="FillAndExpand"
-                                            BackgroundColor="Transparent"/>
-                                    </Frame>
-                                    <Frame 
-                                        Grid.Row="0"
-                                        Grid.Column="1"
-                                        HorizontalOptions="FillAndExpand"
-                                        VerticalOptions="FillAndExpand"
-                                        Padding="10,10,10,10"
-                                        BackgroundColor="Black"
-                                        BorderColor="Green"
-                                        CornerRadius="20">
-                                        <ImageButton 
-                                            Source="dotnet_bot.svg"
-                                            Aspect="AspectFit"
-                                            WidthRequest="25"
-                                            HeightRequest="25"
-                                            HorizontalOptions="FillAndExpand"
-                                            VerticalOptions="FillAndExpand"
-                                            BackgroundColor="Transparent"/>
-                                    </Frame>
-                                    <Frame 
-                                        Grid.Row="0"
-                                        Grid.Column="2"
-                                        HorizontalOptions="FillAndExpand"
-                                        VerticalOptions="FillAndExpand"
-                                        Padding="10,10,10,10"
-                                        BackgroundColor="Black"
-                                        BorderColor="Green"
-                                        CornerRadius="20">
-                                        <ImageButton
-                                            Source="dotnet_bot.svg"
-                                            Aspect="AspectFit"
-                                            WidthRequest="25"
-                                            HeightRequest="25"
-                                            HorizontalOptions="FillAndExpand"
-                                            VerticalOptions="FillAndExpand"
-                                            BackgroundColor="Transparent"/>
-                                    </Frame>
-                                </Grid>
-                            </VerticalStackLayout>
-                            <BoxView 
-                                HeightRequest="1"
-                                BackgroundColor="Green"
-                                Opacity="0.5"
-                                HorizontalOptions="FillAndExpand"
-                                VerticalOptions="Start"/>
-                        </VerticalStackLayout>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
+                <VisualStateManager.VisualStateGroups>
+                    <VisualStateGroup>
+                        <VisualState x:Name="defaultTemplate">
+                            <VisualState.StateTriggers>
+                                <CompareStateTrigger Property="{Binding Source={x:Reference TestPage}, Mode=TwoWay, Path=BindingContext.DefaultItemTemplateEnabled}" Value="True" />
+                            </VisualState.StateTriggers>
+                            <VisualState.Setters>
+                                <Setter Property="ItemTemplate" Value="{StaticResource DefaultTemplate}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState x:Name="otherTemplate">
+                            <VisualState.StateTriggers>
+                                <CompareStateTrigger Property="{Binding Source={x:Reference TestPage}, Mode=TwoWay, Path=BindingContext.DefaultItemTemplateEnabled}" Value="False" />
+                            </VisualState.StateTriggers>
+                            <VisualState.Setters>
+                                <Setter Property="ItemTemplate" Value="{StaticResource OtherTemplate}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateManager.VisualStateGroups>
             </CollectionView>
-        </VerticalStackLayout>
+        </StackLayout>
     </ScrollView>
 </ContentPage>
     
