--- a/MauiCollectionView/MainPage.xaml
+++ b/MauiCollectionView/MainPage.xaml
@@ -5,75 +5,60 @@
     BackgroundColor="Black"
     x:Name="TestPage"    
     x:Class="MauiCollectionView.MainPage">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <DataTemplate x:Key="DefaultTemplate">
-                <StackLayout
-                        BackgroundColor="Red">
-                    <Label
-                            Text="{Binding Name}"
-                            TextColor="White"
-                            FontAttributes="Bold"
-                            FontSize="20"/>
-                    <Label
-                            Text="Template: DefaultTemplate"
-                            TextColor="White"
-                            FontSize="20"/>
-                </StackLayout>
-            </DataTemplate>
-
-            <DataTemplate x:Key="OtherTemplate">
-                <StackLayout
-                        BackgroundColor="Green">
-                    <Label
-                            Text="{Binding Name}"
-                            TextColor="White"
-                            FontAttributes="Bold"
-                            FontSize="20"/>
-                    <Label
-                            Text="Template: OtherTemplate"
-                            TextColor="White"
-                            FontSize="20"/>
-                </StackLayout>
-            </DataTemplate>
-        </ResourceDictionary>
-    </ContentPage.Resources>
-
     <ScrollView>
-        <StackLayout>
-            <Button 
-                Text="Change ItemTemplate"
-                BackgroundColor="NavajoWhite"
-                TextColor="Black"
-                FontSize="20"
-                Command="{Binding ChangeItemTemplateCommand}"/>
-
+        <Grid 
+            RowSpacing="0"
+            ColumnSpacing="0"
+            HorizontalOptions="FillAndExpand"
+            VerticalOptions="FillAndExpand"
+            ColumnDefinitions="5*, 5*" 
+            RowDefinitions="10*">
+            <VerticalStackLayout 
+                Grid.Row="0"
+                Grid.Column="0"
+                HorizontalOptions="FillAndExpand"
+                VerticalOptions="FillAndExpand"
+                BackgroundColor="Black">
+                
+            </VerticalStackLayout>
             <CollectionView 
-                    ItemsSource="{Binding Bots}"
-                    HorizontalOptions="FillAndExpand" 
-                    VerticalOptions="FillAndExpand">
-                <VisualStateManager.VisualStateGroups>
-                    <VisualStateGroup>
-                        <VisualState x:Name="defaultTemplate">
-                            <VisualState.StateTriggers>
-                                <CompareStateTrigger Property="{Binding Source={x:Reference TestPage}, Mode=TwoWay, Path=BindingContext.DefaultItemTemplateEnabled}" Value="True" />
-                            </VisualState.StateTriggers>
-                            <VisualState.Setters>
-                                <Setter Property="ItemTemplate" Value="{StaticResource DefaultTemplate}" />
-                            </VisualState.Setters>
-                        </VisualState>
-                        <VisualState x:Name="otherTemplate">
-                            <VisualState.StateTriggers>
-                                <CompareStateTrigger Property="{Binding Source={x:Reference TestPage}, Mode=TwoWay, Path=BindingContext.DefaultItemTemplateEnabled}" Value="False" />
-                            </VisualState.StateTriggers>
-                            <VisualState.Setters>
-                                <Setter Property="ItemTemplate" Value="{StaticResource OtherTemplate}" />
-                            </VisualState.Setters>
-                        </VisualState>
-                    </VisualStateGroup>
-                </VisualStateManager.VisualStateGroups>
+                Grid.Row="0"
+                Grid.Column="1"
+                ItemsSource="{Binding Bots}"
+                HorizontalOptions="CenterAndExpand" 
+                VerticalOptions="FillAndExpand">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <VerticalStackLayout
+                            HeightRequest="{Binding Height}"
+                            WidthRequest="{Binding Width}">
+                            <Label
+                                Text="{Binding Name}"
+                                TextColor="White"
+                                FontAttributes="Bold"
+                                FontSize="20"/>
+                            <VerticalStackLayout.Triggers>
+                                <DataTrigger TargetType="VerticalStackLayout"
+                                             Binding="{Binding IsSelected, Mode=TwoWay}" 
+                                             Value="True">
+                                    <Setter Property="BackgroundColor" Value="Orange" />
+                                </DataTrigger>
+                                <DataTrigger TargetType="VerticalStackLayout"
+                                             Binding="{Binding IsSelected, Mode=TwoWay}" 
+                                             Value="False">
+                                    <Setter Property="BackgroundColor" Value="Gray" />
+                                </DataTrigger>
+                            </VerticalStackLayout.Triggers>
+                            <VerticalStackLayout.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Tapped="TapGestureRecognizer_Tapped"
+                                    CommandParameter="{Binding .}"/>
+                            </VerticalStackLayout.GestureRecognizers>
+                        </VerticalStackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
             </CollectionView>
-        </StackLayout>
+        </Grid>
     </ScrollView>
 </ContentPage>
     
